# tmpl-fastapi-backend

./: .gitignore  README.md  mypy.ini  pyproject.toml
frontend/: pnpm-lock.yaml
frontend/src/: App.svelte
server/: .env.template  README.md  mypy.ini
server/src/backend/: main.py
server/tests/: test_main.py
src/backend/: main.py
src/backend/api/: __init__.py
src/backend/api/routers/: __init__.py  chat.py  stream.py
src/backend/core/: config.py
src/server/: main.py
src/server/api/: __init__.py
src/server/api/routers/: demo.txt
tests/: test_main.py
web/: pnpm-lock.yaml
web/src/: App.svelte
web/src/components/: Chat.svelte
